// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WaveformControls matches a snapshot when given basic props 1`] = `
<div>
  <div
    class="waveform-display-control-panel"
  >
    <div
      class="toolbar"
      style="width: 1904px;"
    >
      <div
        class="toolbar__left-group"
      >
        <div
          class="toolbar-item toolbar-item__left"
        >
          <div
            class="toolbar-button-group"
          >
            <div>
              <button
                class="bp4-button bp4-disabled toolbar-button--icon-only"
                data-cy="btn-pan-waveform-left"
                disabled=""
                style="width: 30px; margin-right: 2px;"
                tabindex="-1"
                title="Pan waveforms to the left"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-arrow-left"
                    icon="arrow-left"
                  >
                    <svg
                      data-icon="arrow-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div>
              <button
                class="bp4-button bp4-disabled toolbar-button--icon-only"
                data-cy="btn-pan-waveform-right"
                disabled=""
                style="width: 30px;"
                tabindex="-1"
                title="Pan waveforms to the Right"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-arrow-right"
                    icon="arrow-right"
                  >
                    <svg
                      data-icon="arrow-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item toolbar-item__left"
        >
          <div
            class="toolbar-button-group"
          >
            <div>
              <button
                class="bp4-button bp4-align-left toolbar-button"
                data-cy="btn-waveform-zas"
                style="width: 47px;"
                title="Zoom-align-sort (ZAS) when an event is open (hot key: z)"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span>
                    ZAS
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="toolbar__center-group"
      >
        <div
          class="toolbar__whitespace"
          style="width: 1904px;"
        />
      </div>
      <div
        class="toolbar__right-group"
      >
        <div
          class="toolbar-item
                  "
        >
          <span
            class="bp4-popover-wrapper"
          >
            <span
              aria-haspopup="true"
              class="bp4-popover-target"
            >
              <button
                class="bp4-button bp4-align-left"
                data-cy="stations-dropdown"
                style="width: 94px;"
                title="Select stations to be shown"
                type="button"
                value="Stations"
              >
                <span
                  class="bp4-button-text"
                >
                  Stations
                </span>
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-caret-down"
                  icon="caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="dropdown-container"
            >
              <span
                class="dropdown-selector"
                data-cy="mode-dropdown"
              >
                <div
                  class="bp4-html-select bp4-disabled"
                >
                  <select
                    disabled=""
                    style="min-width: 130px; width: 130px;"
                    title="Set the display mode"
                  >
                    <option
                      value="Default"
                    >
                      Default
                    </option>
                    <option
                      value="Measurement"
                    >
                      Measurement
                    </option>
                  </select>
                  <span
                    class="bp4-icon bp4-icon-double-caret-vertical"
                    icon="double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        Open dropdown
                      </desc>
                      <path
                        d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <span
            class="bp4-popover-wrapper"
          >
            <span
              aria-haspopup="true"
              class="bp4-popover-target"
            >
              <button
                class="bp4-button bp4-align-left"
                data-cy="scaling-option-selector"
                style="width: 72px;"
                title="Waveform amplitude scaling options"
                type="button"
                value="Auto"
              >
                <span
                  class="bp4-button-text"
                >
                  Auto
                </span>
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-caret-down"
                  icon="caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp4-button bp4-disabled bp4-align-left toolbar-button"
                disabled=""
                style="width: 88px;"
                tabindex="-1"
                title="Set default phase of new signal detections"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span>
                    P
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-chevron-down"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="numeric-input__wrapper"
              style="width: 100px;"
            >
              <div
                class="bp4-control-group bp4-fill bp4-numeric-input numeric-input"
              >
                <div
                  class="bp4-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp4-input"
                    data-cy="num-waveform-input"
                    max="100"
                    min="1"
                    placeholder="Enter a number..."
                    title="Sets the number of visible channels per screen"
                    type="text"
                    value="20"
                    width="100"
                  />
                </div>
                <div
                  class="bp4-button-group bp4-vertical bp4-fixed"
                >
                  <button
                    aria-label="increment"
                    class="bp4-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-chevron-up"
                      icon="chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-label="decrement"
                    class="bp4-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-chevron-down"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp4-button bp4-align-left toolbar-button"
                style="width: 154px;"
                title="Time"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span>
                    Align: Time
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-chevron-down"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="dropdown-container"
            >
              <span
                class="dropdown-label"
              >
                Sort: 
              </span>
              <span
                class="dropdown-selector"
                data-cy="sort-dropdown"
              >
                <div
                  class="bp4-html-select"
                >
                  <select
                    style="min-width: 130px; width: 130px;"
                    title="Set the sort order of stations"
                  >
                    <option
                      value="Distance"
                    >
                      Distance
                    </option>
                    <option
                      value="Station: A-Z"
                    >
                      Station: A-Z
                    </option>
                    <option
                      value="Station: Z-A"
                    >
                      Station: Z-A
                    </option>
                  </select>
                  <span
                    class="bp4-icon bp4-icon-double-caret-vertical"
                    icon="double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        Open dropdown
                      </desc>
                      <path
                        d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/hide time uncertainty bars on signal detections (Ctrl + Shift + U)"
          >
            <div
              class="toolbar-switch-label"
            >
              Time Uncertainty:
            </div>
            <label
              class="bp4-control bp4-switch bp4-large toolbar-switch__blueprint time-uncertainty"
            >
              <input
                title="Show/hide time uncertainty bars on signal detections (Ctrl + Shift + U)"
                type="checkbox"
              />
              <span
                class="bp4-control-indicator"
              />
            </label>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/Hide predicted phases"
          >
            <div
              class="toolbar-switch-label"
            >
              Predicted Phases:
            </div>
            <label
              class="bp4-control bp4-switch bp4-large toolbar-switch__blueprint predicted-phases"
            >
              <input
                checked=""
                data-cy="Predicted Phases"
                title="Show/Hide predicted phases"
                type="checkbox"
              />
              <span
                class="bp4-control-indicator"
              />
            </label>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp4-button bp4-disabled bp4-align-left toolbar-button"
                disabled=""
                style="width: 110px;"
                tabindex="-1"
                title="Show/Hide categories of QC masks"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span>
                    QC Masks
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-chevron-down"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/Hide Measure Window"
          >
            <div
              class="toolbar-switch-label"
            >
              Measure Window:
            </div>
            <label
              class="bp4-control bp4-switch bp4-large toolbar-switch__blueprint measure-window"
            >
              <input
                title="Show/Hide Measure Window"
                type="checkbox"
              />
              <span
                class="bp4-control-indicator"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="loading-indicator__container"
    data-cy="waveform-loading-indicator"
  />
</div>
`;

exports[`WaveformControls matches a snapshot when given missing props 1`] = `
<div>
  <div
    class="waveform-display-control-panel"
  >
    <div
      class="toolbar"
      style="width: 1904px;"
    >
      <div
        class="toolbar__left-group"
      >
        <div
          class="toolbar-item toolbar-item__left"
        >
          <div
            class="toolbar-button-group"
          >
            <div>
              <button
                class="bp4-button bp4-disabled toolbar-button--icon-only"
                data-cy="btn-pan-waveform-left"
                disabled=""
                style="width: 30px; margin-right: 2px;"
                tabindex="-1"
                title="Pan waveforms to the left"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-arrow-left"
                    icon="arrow-left"
                  >
                    <svg
                      data-icon="arrow-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div>
              <button
                class="bp4-button bp4-disabled toolbar-button--icon-only"
                data-cy="btn-pan-waveform-right"
                disabled=""
                style="width: 30px;"
                tabindex="-1"
                title="Pan waveforms to the Right"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-arrow-right"
                    icon="arrow-right"
                  >
                    <svg
                      data-icon="arrow-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item toolbar-item__left"
        >
          <div
            class="toolbar-button-group"
          >
            <div>
              <button
                class="bp4-button bp4-align-left toolbar-button"
                data-cy="btn-waveform-zas"
                style="width: 47px;"
                title="Zoom-align-sort (ZAS) when an event is open (hot key: z)"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span>
                    ZAS
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="toolbar__center-group"
      >
        <div
          class="toolbar__whitespace"
          style="width: 1904px;"
        />
      </div>
      <div
        class="toolbar__right-group"
      >
        <div
          class="toolbar-item
                  "
        >
          <span
            class="bp4-popover-wrapper"
          >
            <span
              aria-haspopup="true"
              class="bp4-popover-target"
            >
              <button
                class="bp4-button bp4-align-left"
                data-cy="stations-dropdown"
                style="width: 94px;"
                title="Select stations to be shown"
                type="button"
                value="Stations"
              >
                <span
                  class="bp4-button-text"
                >
                  Stations
                </span>
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-caret-down"
                  icon="caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="dropdown-container"
            >
              <span
                class="dropdown-selector"
                data-cy="mode-dropdown"
              >
                <div
                  class="bp4-html-select bp4-disabled"
                >
                  <select
                    disabled=""
                    style="min-width: 130px; width: 130px;"
                    title="Set the display mode"
                  >
                    <option
                      value="Default"
                    >
                      Default
                    </option>
                    <option
                      value="Measurement"
                    >
                      Measurement
                    </option>
                  </select>
                  <span
                    class="bp4-icon bp4-icon-double-caret-vertical"
                    icon="double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        Open dropdown
                      </desc>
                      <path
                        d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <span
            class="bp4-popover-wrapper"
          >
            <span
              aria-haspopup="true"
              class="bp4-popover-target"
            >
              <button
                class="bp4-button bp4-align-left"
                data-cy="scaling-option-selector"
                style="width: 72px;"
                title="Waveform amplitude scaling options"
                type="button"
                value="Auto"
              >
                <span
                  class="bp4-button-text"
                >
                  Auto
                </span>
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-caret-down"
                  icon="caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp4-button bp4-disabled bp4-align-left toolbar-button"
                disabled=""
                style="width: 88px;"
                tabindex="-1"
                title="Set default phase of new signal detections"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span>
                    P
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-chevron-down"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="numeric-input__wrapper"
              style="width: 100px;"
            >
              <div
                class="bp4-control-group bp4-fill bp4-numeric-input numeric-input"
              >
                <div
                  class="bp4-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp4-input"
                    data-cy="num-waveform-input"
                    max="100"
                    min="1"
                    placeholder="Enter a number..."
                    title="Sets the number of visible channels per screen"
                    type="text"
                    value="20"
                    width="100"
                  />
                </div>
                <div
                  class="bp4-button-group bp4-vertical bp4-fixed"
                >
                  <button
                    aria-label="increment"
                    class="bp4-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-chevron-up"
                      icon="chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-label="decrement"
                    class="bp4-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-chevron-down"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp4-button bp4-align-left toolbar-button"
                style="width: 154px;"
                title="Predicted P"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span>
                    Align: P
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-chevron-down"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="dropdown-container"
            >
              <span
                class="dropdown-label"
              >
                Sort: 
              </span>
              <span
                class="dropdown-selector"
                data-cy="sort-dropdown"
              >
                <div
                  class="bp4-html-select"
                >
                  <select
                    style="min-width: 130px; width: 130px;"
                    title="Set the sort order of stations"
                  >
                    <option
                      value="Distance"
                    >
                      Distance
                    </option>
                    <option
                      value="Station: A-Z"
                    >
                      Station: A-Z
                    </option>
                    <option
                      value="Station: Z-A"
                    >
                      Station: Z-A
                    </option>
                  </select>
                  <span
                    class="bp4-icon bp4-icon-double-caret-vertical"
                    icon="double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        Open dropdown
                      </desc>
                      <path
                        d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/hide time uncertainty bars on signal detections (Ctrl + Shift + U)"
          >
            <div
              class="toolbar-switch-label"
            >
              Time Uncertainty:
            </div>
            <label
              class="bp4-control bp4-switch bp4-large toolbar-switch__blueprint time-uncertainty"
            >
              <input
                title="Show/hide time uncertainty bars on signal detections (Ctrl + Shift + U)"
                type="checkbox"
              />
              <span
                class="bp4-control-indicator"
              />
            </label>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/Hide predicted phases"
          >
            <div
              class="toolbar-switch-label"
            >
              Predicted Phases:
            </div>
            <label
              class="bp4-control bp4-switch bp4-large toolbar-switch__blueprint predicted-phases"
            >
              <input
                checked=""
                data-cy="Predicted Phases"
                title="Show/Hide predicted phases"
                type="checkbox"
              />
              <span
                class="bp4-control-indicator"
              />
            </label>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp4-button bp4-disabled bp4-align-left toolbar-button"
                disabled=""
                style="width: 110px;"
                tabindex="-1"
                title="Show/Hide categories of QC masks"
                type="button"
              >
                <span
                  class="bp4-button-text"
                >
                  <span>
                    QC Masks
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-chevron-down"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/Hide Measure Window"
          >
            <div
              class="toolbar-switch-label"
            >
              Measure Window:
            </div>
            <label
              class="bp4-control bp4-switch bp4-large toolbar-switch__blueprint measure-window"
            >
              <input
                title="Show/Hide Measure Window"
                type="checkbox"
              />
              <span
                class="bp4-control-indicator"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="loading-indicator__container"
    data-cy="waveform-loading-indicator"
  />
</div>
`;
